minor revisions to work with colab

--- a/tutorial_events/20201119-ICERM/Demo-RIFT_Principles.ipynb
+++ b/tutorial_events/20201119-ICERM/Demo-RIFT_Principles.ipynb
@@ -18,15 +18,13 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'glue'",
+     "evalue": "No module named 'RIFT'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-1-a100ba0d6347>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m#sys.path.append('/Users/rossma/.local/lib/python3.8/site-packages')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m#sys.path.append('//Library/Python/3.7/site-packages')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mRIFT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmcsampler\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmcsampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/research-projects-RIT/MonteCarloMarginalizeCode/Code/RIFT/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0m__all__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integrators'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'interpolators'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'likelihood'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'physics'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'misc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlalsimutils\u001b[0m  \u001b[0;31m# top-level interface utility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m  \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m   \u001b[0;31m# sub-packages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/research-projects-RIT/MonteCarloMarginalizeCode/Code/RIFT/lalsimutils.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0msci_ver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_int\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# scipy version number as int list.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mglue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mligolw\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlsctables\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mligolw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0milwd\u001b[0m \u001b[0;31m# check all are needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlal\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCache\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'glue'"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'RIFT'"
      ]
     }
    ],
@@ -45,7 +43,7 @@
     "#    print(name)\n",
     "#sys.path.append('/Users/rossma/.local/lib/python3.8/site-packages')\n",
     "#sys.path.append('//Library/Python/3.7/site-packages')\n",
-    "import RIFT.mcsampler as mcsampler\n"
+    "#import RIFT.mcsampler as mcsampler\n"
    ]
   },
   {
@@ -335,7 +333,7 @@
     "# At some point we decide we are done, \n",
     "# and we request a large sample of events from CIP\n",
     "\n",
-    "x_final = CIP(x_next_net,y_next_net,npts_out=10000)"
+    "x_final = CIP(x_next_net,y_next_net,npts_out=5000)"
    ]
   },
   {
